RESOLVED FIXED35423
[Qt] Compile error with 3d-canvas
https://bugs.webkit.org/show_bug.cgi?id=35423
Summary [Qt] Compile error with 3d-canvas
Noam Rosenthal
Reported 2010-02-26 00:10:17 PST
When building QtWebkit with 3d-canvas enabled, a compile error occured. That's because the following functions are called directly: glActiveTexture, glSampleCoverage, glBlendEquation, while they should be called using getProcAddress.
Attachments
Find function pointers using GET_PROC_ADDRESS macro. (5.02 KB, patch)
2010-02-26 01:03 PST, Jarkko Sakkinen
no flags
Jarkko Sakkinen
Comment 1 2010-02-26 00:31:27 PST
I'll start to look into this.
Jarkko Sakkinen
Comment 2 2010-02-26 01:03:12 PST
Created attachment 49572 [details] Find function pointers using GET_PROC_ADDRESS macro.
WebKit Commit Bot
Comment 3 2010-02-26 13:16:06 PST
Comment on attachment 49572 [details] Find function pointers using GET_PROC_ADDRESS macro. Clearing flags on attachment: 49572 Committed r55304: <http://trac.webkit.org/changeset/55304>
WebKit Commit Bot
Comment 4 2010-02-26 13:16:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.